[package]
name = "cargo-devcade"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Mary Strodl <ipadlover8322@gmail.com>"]
description = "CLI tool for building and packaging devcade games"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.15.3"
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
walkdir = "2.3.2"
zip = "0.6.4"
