[package]
name = "cargo-devcade"
version = "0.5.1"
edition = "2021"
license = "MIT"
authors = ["Mary Strodl <ipadlover8322@gmail.com>"]
description = "CLI tool for building and packaging devcade games"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.15.3"
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10.0"
image = "0.24.1"
imageproc = "0.23.0"
lazy_static = "1.4.0"
log = "0.4.17"
rusttype = "0.9.3"
walkdir = "2.3.2"
zip = "0.6.4"
